--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
   "name": "Grease Cast PracticeBase",
   "short_name": "Grease Cast",
-  "start_url": "/main.html",
+  "start_url": "https://therealduckers.github.io/Grease-PracticeBase/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#da291c",
   "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "https://therealduckers.github.io/Grease-PracticeBase/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512.png",
+      "src": "https://therealduckers.github.io/Grease-PracticeBase/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
